Firewall-Regeln verschärft Zugriff nur noch aus eigenem Subnet

--- a/ansible/group_vars/g_dnsmasq.yml
+++ b/ansible/group_vars/g_dnsmasq.yml
@@ -55,13 +55,17 @@
     - rule: allow
       to_port: 22
       protocol: tcp
+      from_ip: 11.10.31.0/24
       comment: 'ssh'
     - rule: allow
       to_port: 53
+      from_ip: 11.10.31.0/24
       comment: 'dns'
     - rule: allow
       to_port: 67
+      from_ip: 11.10.31.0/24
       comment: 'dhcp'
     - rule: allow
       to_port: 68
+      from_ip: 11.10.31.0/24
       comment: 'dhcp'
