--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -4,6 +4,7 @@
     - rule: allow
       to_port: 22
       protocol: tcp
+      from_ip: 11.10.31.0/24
       comment: 'ssh'
   ufw_default_incoming_policy: deny
   ufw_default_outgoing_policy: allow
