--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,6 +5,7 @@ roles_path            = ./roles
 lookup_plugins        = ./plugins/lookup
 collections_paths     = ./ansible_collections
 private_key_file      = ./ansible_private_key
+inventory             = ./inventory.yml
 
 [inventory]
 
