diff als default option für ansible (#138)
* diff als default option fur ansible

* Update ansible.cfg

inventorx als standard parameter

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,6 +5,7 @@ roles_path            = ./roles
 lookup_plugins        = ./plugins/lookup
 collections_paths     = ./ansible_collections
 private_key_file      = ./ansible_private_key
+inventory             = ./inventory.yml
 
 [inventory]
 
@@ -23,3 +24,4 @@ private_key_file      = ./ansible_private_key
 [colors]
 
 [diff]
+always = true
