Update  Rolle: install_packages (#143)
* alte rolle entfernt

* neue Rolle hinzugefügt

* Playbook angepasst

* Variablen hinzugefügt

* Update all.yml

tmux ergänzt

* Doku Bereitstellung (#149)

* Anleitung Aufsetzen ansible hinzugefügt (#148)

* Anleitung Aufsetzen ansible hinzugefügt

* Ausführung noch

* Firewall-Regeln verschärft (#147)

Zugriff nur noch aus eigenem Subnet

* Python-Paket entfernt: (#146)

- playbook-grapher

* Bugfix ACNG (#145)

---
security.conf wurde falsche befüllt

* Playbooks sortiert (#144)

* alte rolle entfernt

* neue Rolle hinzugefügt

* Playbook angepasst

* Variablen hinzugefügt

* Update all.yml

tmux ergänzt

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,4 +1,39 @@
 ---
+  ### mgrote.apt_install_packages
+  programs_common:
+    - locales
+    - python3
+    - build-essential
+    - htop
+    - git
+    - dnsutils
+    - nano
+    - mc
+    - cifs-utils
+    - ca-certificates
+    - netdiscover
+    - tree
+    - curl
+    - logrotate
+    - ncdu
+    - net-tools
+    - apt-transport-https
+    - tmux
+    - neofetch
+    - moreutils
+    - ntpdate
+    - acl
+    - vim
+  programs_only_physical:
+    - hddtemp
+    - ipmitool
+    - s-tui
+    - smartmontools
+    - lm-sensors
+  programs_only_vms:
+    - qemu-guest-agent
+    - open-vm-tools
+  
   ### oefenweb.ufw
   ufw_rules:
     - rule: allow
