WIP: Bugfixes: acng (#115)
* Template acng angepasst, Proxy wird jetzt in acng.conf gesetzt

* Vars angepasst

* set_apt_proxay aus bootstrap entfernt

* set apt proxy in acng playbook

* alte Anleitung entfernt

* acng_server_port --> acng_port

* acng_server_auth_user --> acng_auth_user

* acng_server_auth_pass --> acng_auth_pass

* in Doku (#117)

* Rolle: http_proxy (#105)

* rolle angelegt

* Logik

* Doku

* Playbook

* Variablen-Namen: set_apt_proxy (#120)

* server --> apt_proxy_server

* port --> apt_proxy_port

* set_apt_proxy_apt_conf_path --> apt_proxy_apt_conf_path

* Group Vars angelegt

* Präfixe Gruppen und Hosts gesetzt

* Bugfixes + Housekeeping (#121)

* Doku NTP

* jenkins auskommentiert

* set apt sources auskommentiert

* playbook configure apt proxy erstellt

* playbook set ntp client für alle

* gruppennamen

* ufe nur für ubuntu

* inventory präfixe

* präfix pve

* Konkurrenz-Rolle: dnsmasq - für dhcp und dns (#99)

* rename dnsmasq-rolle

* setting timeout
---
da ansible beim ausführen des scripts in ein timeout gelaufen ist musste 
ich von default 12s auf 30s erhöhen.
siehe: 
https://github.com/DanielMueller1309/ansible/wiki/Timeout-(12s)-waiting-for-privilege-escalation-prompt

* rechtschreibung behoben

* dhcp -> dnsmasq
---
besseres verständnis da dnsmasq dhcp und dns macht

* add dns task to main

* anpassung Readme

* add variablen erklärungen

* remove one dnsmasq description

* add gateway and ntp

* dns und dhcp var getrennt

* timeout rausgenommen

* rename var

* changed wrong written resolv.conf

* add resolv.conf task

* set präfixes

* präfix zu rollen vars ergänzt

* add präfixe to vars and change from all to g_dnsmasq

* add präfix to template

* examples entfernt, wird nicht benötigt

* ordner umbenannt

* alte templates entsorgt

* wip

* Alte IP Ubersicht ausgemustert

* Variablen neu angelegt

* tasks



--- a/ansible/playbooks/install_acng_server.yml
+++ b/ansible/playbooks/install_acng_server.yml
@@ -1,5 +1,5 @@
 ---
-  - hosts: g_acng
+  - hosts: acng
     roles:
       - { role: set_apt_proxy, tags: "apt-proxy", become: yes}
       - { role: mgrote.acng, tags: "acng-server", become: yes}
