--- a/ansible/roles/mgrote.acng/templates/acng.conf
+++ b/ansible/roles/mgrote.acng/templates/acng.conf
@@ -90,7 +90,7 @@ ReportPage: acng-report.html
 # Enables extended client information in log entries. When set to 0, only
 # activity type, time and transfer sizes are logged.
 #
-# VerboseLog: 1
+VerboseLog: {{ acng_verboselog }}
 
 # Don't detach from the starting console.
 #
@@ -228,7 +228,7 @@ ExThreshold: {{ acng_exthreshold }}
 #
 # Default: 0
 #
-# Debug:3
+Debug:{{ acng_debug }}
 
 # Usually, general purpose proxies like Squid expose the IP address of the
 # client user to the remote server using the X-Forwarded-For HTTP header. This
