--- a/ansible/playbooks/base/0_bootstrap.yml
+++ b/ansible/playbooks/base/0_bootstrap.yml
@@ -12,7 +12,7 @@
     roles:
       - set_apt_proxy
 #      - { role: mgrote.set_apt_sources, tags: "sources", become: yes}
-      - { role: robertdebock.bootstrap, tags: "bootstrap", become: yes}
+#      - { role: robertdebock.bootstrap, tags: "bootstrap", become: yes}
       - { role: ryandaniels.create_users, tags: "user", become: yes}
 
     vars:
