--- a/ansible/roles/mgrote.acng/templates/security.conf
+++ b/ansible/roles/mgrote.acng/templates/security.conf
@@ -1,3 +1,4 @@
+{{ file_header }}
 # This file contains confidential data and should be protected with file
 # permissions from being read by untrusted users.
 #
