--- a/ansible/group_vars/g_jenkins.yml
+++ b/ansible/group_vars/g_jenkins.yml
@@ -1,4 +1,12 @@
 ---
+  ### geerlingguy.jenkins
+  jenkins_package_state: latest
+  jenkins_http_port: 8080
+  jenkins_admin_username: jadmin
+  jenkins_admin_password: "{{ lookup('keepass', 'jenkins_admin_password', 'password') }}"
+  jenkins_plugins_install_dependencies: true
+  jenkins_plugins_state: latest
+  jenkins_java_options: "-Djenkins.install.runSetupWizard=true"
   ### oefenweb.ufw
   ufw_rules:
     - rule: allow
@@ -8,33 +16,19 @@
       comment: 'ssh'
     - rule: allow
       to_port: 8080
-      protocol: tcp
+      comment: 'jenkins'
       from_ip: 11.10.31.0/24
-      comment: 'jenkins-webinterface'
-  ### geerlingguy.jenkins
-  jenkins_package_state: present
-  jenkins_home: /var/lib/jenkins
-  jenkins_admin_username: admin
-  jenkins_admin_password: "{{ lookup('keepass', 'jenkins_admin_password', 'password') }}"
-  jenkins_http_port: 8080
-  jenkins_plugins_install_dependencies: true
-  jenkins_plugins_state: latest
-  jenkins_plugins:
-    - ansible
-    - github
-  jenkins_java_options: "-Djenkins.install.runSetupWizard=true"
-  jenkins_proxy_host: "proxy.ausbildung.md"
-  jenkins_proxy_port: "8080"
-  jenkins_proxy_noproxy:
-    - "127.0.0.1"
-    - "localhost"
-    - "11.10.31.0"
+  ### mgrote.restic
+  restic_folders_to_backup: /usr/local /etc /root /home /var/lib/jenkins
   ### geerlingguy.pip
   pip_package: python3-pip
   pip_install_packages:
-    - name: pykeepass
-    - name: Jinja2
+    - name: pykeepass==3.2.1
+    - name: jinja2>=2.11.2
     - name: markupsafe
   ### geerlingguy.ansible
   ansible_install_method: pip
   ansible_install_version_pip: '2.10'
+  ### mgrote.apt_install_packages
+  programs_extra:
+    - sshpass
