--- a/ansible/group_vars/g_jenkins.yml
+++ b/ansible/group_vars/g_jenkins.yml
@@ -7,6 +7,13 @@
   jenkins_plugins_install_dependencies: true
   jenkins_plugins_state: latest
   jenkins_java_options: "-Djenkins.install.runSetupWizard=true"
+  jenkins_java_options: "-Djenkins.install.runSetupWizard=true"
+  jenkins_proxy_host: "proxy.ausbildung.md"
+  jenkins_proxy_port: "8080"
+  jenkins_proxy_noproxy:
+    - "127.0.0.1"
+    - "localhost"
+    - "11.10.31.0"
   ### oefenweb.ufw
   ufw_rules:
     - rule: allow
