--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -31,3 +31,7 @@
       g_nextcloud:
         hosts:
           plnext001:
+      g_testserver:
+        hosts:
+          TLDNSM001:
+            ansible_host: 11.10.31.200
