--- a/ansible/playbooks/base/0_bootstrap.yml
+++ b/ansible/playbooks/base/0_bootstrap.yml
@@ -17,11 +17,11 @@
 
     vars:
       ### reobertdebock.bootstrap
-      bootstrap_user: kati
+      bootstrap_user: user
       bootstrap_wait_for_host: no
       bootstrap_timeout: 1
       ### ansible
-      ansible_user: "kati"
+      ansible_user: "user"
       ansible_password: hallowelt
       ansible_become_password: hallowelt
       ansible_ssh_common_args: "'-o StrictHostKeyChecking=no'"
