--- a/ansible/group_vars/g_ansible.yml
+++ b/ansible/group_vars/g_ansible.yml
@@ -5,6 +5,8 @@
     - name: pykeepass==3.2.1
     - name: jinja2>=2.11.2
     - name: markupsafe
+  pip_http_proxy: '11.8.108.254:8080'
+  pip_https_proxy: '11.8.108.254:8080'
   ### geerlingguy.ansible
   ansible_install_method: pip
   ansible_install_version_pip: '2.10'
