--- a/ansible/group_vars/g_ansible.yml
+++ b/ansible/group_vars/g_ansible.yml
@@ -2,8 +2,10 @@
   ### geerlingguy.pip
   pip_package: python3-pip
   pip_install_packages:
-    - name: pykeepass==3.2.1
-    - name: jinja2>=2.11.2
+    - name: pykeepass
+      version: "3.2.1"
+    - name: Jinja2
+      version: "2.11.2"
     - name: markupsafe
   pip_http_proxy: '11.8.108.254:8080'
   pip_https_proxy: '11.8.108.254:8080'
