vars darf leer sein

--- a/ansible/roles/geerlingguy.pip/tasks/main.yml
+++ b/ansible/roles/geerlingguy.pip/tasks/main.yml
@@ -13,5 +13,5 @@
     executable: "{{ pip_executable }}"
   with_items: "{{ pip_install_packages }}"
   environment:
-    HTTP_PROXY: "{{ pip_http_proxy }}"
-    HTTPS_PROXY: "{{ pip_https_proxy }}"
+    HTTP_PROXY: "{{ pip_http_proxy | default() }}"
+    HTTPS_PROXY: "{{ pip_https_proxy | default() }}"
