--- a/ansible/group_vars/g_ansible.yml
+++ b/ansible/group_vars/g_ansible.yml
@@ -2,9 +2,13 @@
   ### geerlingguy.pip
   pip_package: python3-pip
   pip_install_packages:
-    - name: pykeepass==3.2.1
-    - name: jinja2>=2.11.2
+    - name: pykeepass
+      version: "3.2.1"
+    - name: Jinja2
+      version: "2.11.2"
     - name: markupsafe
+  pip_http_proxy: '11.8.108.254:8080' # für pip und ansible
+  pip_https_proxy: '11.8.108.254:8080' # für pip und ansible
   ### geerlingguy.ansible
   ansible_install_method: pip
   ansible_install_version_pip: '2.10'
