--- a/ansible/group_vars/g_ansible.yml
+++ b/ansible/group_vars/g_ansible.yml
@@ -7,8 +7,8 @@
     - name: Jinja2
       version: "2.11.2"
     - name: markupsafe
-  pip_http_proxy: '11.8.108.254:8080' # für pip und ansible
-  pip_https_proxy: '11.8.108.254:8080' # für pip und ansible
+  pip_http_proxy: '"{{ proxy_ip }}:{{ proxy_port }}"' # für pip und ansible
+  pip_https_proxy: '"{{ proxy_ip }}:{{ proxy_port }}"' # für pip und ansible
   ### geerlingguy.ansible
   ansible_install_method: pip
   ansible_install_version_pip: '2.10'
