--- a/ansible/group_vars/g_jenkins.yml
+++ b/ansible/group_vars/g_jenkins.yml
@@ -28,8 +28,10 @@
   ### geerlingguy.pip
   pip_package: python3-pip
   pip_install_packages:
-    - name: pykeepass==3.2.1
-    - name: jinja2>=2.11.2
+    - name: pykeepass
+      version: "3.2.1"
+    - name: Jinja2
+      version: "2.11.2"
     - name: markupsafe
   ### geerlingguy.ansible
   ansible_install_method: pip
