--- a/ansible/group_vars/g_gitea.yml
+++ b/ansible/group_vars/g_gitea.yml
@@ -1,23 +1,21 @@
 ---
-  ### mgrote.restic
-  restic_folders_to_backup: "/usr/local /etc /root /var/lib /home"
   ### oefenweb.ufw
   ufw_rules:
     - rule: allow
       to_port: 22
       protocol: tcp
       comment: 'ssh'
-      from_ip: 192.168.2.0/24
+      from_ip: 11.10.31.0/24
     - rule: allow
       to_port: 3000
       protocol: tcp
       comment: 'gitea'
-      from_ip: 192.168.2.0/24
+      from_ip: 11.10.31.0/24
     - rule: allow
       to_port: 2222
       protocol: tcp
       comment: 'gitea'
-      from_ip: 192.168.2.0/24
+      from_ip: 11.10.31.0/24
   ### tmaurice.gitea
   gitea_version: "1.13.7"
   gitea_app_name: "Gitea"
@@ -25,7 +23,7 @@
   gitea_home: "/var/lib/gitea"
   gitea_repository_root: "{{ gitea_home }}"
   gitea_user_repo_limit: 300
-  gitea_root_url: https://git.mgrote.net
+  gitea_root_url: http://BLGITE001.ausbildung.md
   gitea_offline_mode: true
   gitea_lfs_server_enabled: false
   gitea_secret_key: "{{ lookup('keepass', 'gitea_secret_key', 'password') }}"
@@ -33,7 +31,7 @@
   gitea_disable_git_hooks: false
   gitea_show_user_email: false
   gitea_disable_gravatar: true
-  gitea_enable_captcha: true
+  gitea_enable_captcha: false
   gitea_only_allow_external_registration: false
   gitea_enable_notify_mail: false
   gitea_force_private: false
@@ -41,32 +39,25 @@
   gitea_repo_indexer_enabled: true
   gitea_extra_config: ""
 
-  gitea_mailer_enabled: true
-  gitea_mailer_skip_verify: false
-  gitea_mailer_tls_enabled: true
-  gitea_mailer_host: smtp.strato.de:465
-  gitea_mailer_from: info@mgrote.net
-  gitea_mailer_user: "info@mgrote.net"
-  gitea_mailer_password: "{{ lookup('keepass', 'postfix_absender_passwort', 'password') }}"
-  gitea_mailer_type: smtp
+  gitea_mailer_enabled: false
 
   gitea_db_type: sqlite3
   gitea_db_path: "{{ gitea_home }}/data/gitea.db" # for sqlite3
 
   gitea_ssh_listen: 0.0.0.0
-  gitea_ssh_domain: git.mgrote.net
+  gitea_ssh_domain: BLGITE001.ausbildung.md
   gitea_ssh_port: 2222
   gitea_start_ssh: true
 
-  gitea_http_domain: git.mgrote.net
+  gitea_http_domain: BLGITE001.ausbildung.md
   gitea_http_listen: 0.0.0.0
   gitea_http_port: 3000
   gitea_disable_http_git: false
   gitea_protocol: http
 
-  gitea_show_registration_button: false
+  gitea_show_registration_button: true
   gitea_require_signin: false
-  gitea_disable_registration: true
+  gitea_disable_registration: false
 
   gitea_fail2ban_enabled: true
   gitea_fail2ban_jail_maxretry: 10
