--- a/ansible/group_vars/g_gitea.yml
+++ b/ansible/group_vars/g_gitea.yml
@@ -18,7 +18,7 @@
       from_ip: 11.10.31.0/24
   ### geerlingguy.mysql
   mysql_root_password_update: true
-  mysql_root_password: "{{ gitea_db_passwort_root_user }}"
+  mysql_root_password: "{{ lookup('keepass', 'gitea_db_passwort_root_user', 'password') }}"
   mysql_port: "3306"
   mysql_databases:
     - name: gitea_db
@@ -27,7 +27,7 @@
   mysql_users:
     - name: gitea_user
       host: "%"
-      password: "{{ gitea_db_passwort_gitea_user }}"
+      password: "{{ lookup('keepass', 'gitea_db_passwort_gitea_usery', 'password') }}"
       priv: "gitea_db.*:ALL"
   ### tmaurice.gitea
   gitea_version: "1.13.7"
