--- a/ansible/playbooks/0_setup.yml
+++ b/ansible/playbooks/0_setup.yml
@@ -2,13 +2,5 @@
   - hosts: all
     gather_facts: false
   - import_playbook: ./base/0_bootstrap.yml
+  - import_playbook: ./base/0-1_post_bootstrap.yml
   - import_playbook: ./base/99_base.yml
-  - post_tasks:
-    - name: entferne den bootstrap_user
-      become: true
-      become_user: ansible-user
-      user:
-        name: user
-        state: absent
-        remove: yes
-      tags: user
