--- a/ansible/playbooks/base/0_bootstrap.yml
+++ b/ansible/playbooks/base/0_bootstrap.yml
@@ -14,7 +14,10 @@
 #      - { role: mgrote.set_apt_sources, tags: "sources", become: yes}
       - { role: robertdebock.bootstrap, tags: "bootstrap", become: yes}
       - { role: ryandaniels.create_users, tags: "user", become: yes}
-
+    post_tasks:
+      - name: reboot für qemu-guest-agent
+        reboot:
+          reboot_timeout: 120
     vars:
       ### reobertdebock.bootstrap
       bootstrap_user: kati
