--- a/ansible/playbooks/3_app/proxmox.yml
+++ b/ansible/playbooks/3_app/proxmox.yml
@@ -1,5 +1,3 @@
 ---
   - hosts: g_proxmox
-      - { role: mgrote.cv4pve-autosnap,
-        tags: "cv4pve",
-        when: "'RMPHLPVE1.ausbildung.md' in inventory_hostname" }
+      - { role: mgrote.cv4pve-autosnap, tags: "cv4pve", when: "'RMPHLPVE1.ausbildung.md' in inventory_hostname" }
