--- a/ansible/playbooks/3_app/proxmox.yml
+++ b/ansible/playbooks/3_app/proxmox.yml
@@ -1,3 +1,4 @@
 ---
   - hosts: g_proxmox
+    roles:
       - { role: mgrote.cv4pve-autosnap, tags: "cv4pve", when: "'RMPHLPVE1.ausbildung.md' in inventory_hostname" }
