--- a/ansible/group_vars/g_nextcloud.yml
+++ b/ansible/group_vars/g_nextcloud.yml
@@ -3,13 +3,13 @@
   mysql_port: "3306"
   mysql_root_password_update: true
   mysql_user_password_update: true
-  mysql_root_password: "{{ lookup('keepass', 'nextcloud_root', 'password') }}" # mkpasswd --method=SHA-512 --stdin  #in Keepass
+  mysql_root_password: "{{ lookup('keepass', 'mysql_root', 'password') }}" # mkpasswd --method=SHA-512 --stdin  #in Keepass
   mysql_databases:
     - name: nextcloud_db
       encoding: utf8
       collation: utf8_general_ci
   mysql_users:
-    - name: example_user
+    - name: mysql_user
       host: "%"
-      password: "{{ lookup('keepass', 'nextcloud_user', 'password') }}" # mkpasswd --method=SHA-512 --stdin  #in Keepass
-      priv: "example_db.*:ALL"
+      password: "{{ lookup('keepass', 'mysql_user', 'password') }}" # mkpasswd --method=SHA-512 --stdin  #in Keepass
+      priv: "nextcloud_db.*:ALL"
