--- a/ansible/group_vars/g_nextcloud.yml
+++ b/ansible/group_vars/g_nextcloud.yml
@@ -3,13 +3,12 @@
   mysql_port: "3306"
   mysql_root_password_update: true
   mysql_user_password_update: true
-  mysql_root_password: "{{ lookup('keepass', 'mysql_root', 'password') }}" # mkpasswd --method=SHA-512 --stdin  #in Keepass
-  mysql_databases:
+  mysql_root_password: "{{ lookup('keepass', 'mysql_root', 'password') }}"
     - name: nextcloud_db
       encoding: utf8
       collation: utf8_general_ci
   mysql_users:
     - name: mysql_user
       host: "%"
-      password: "{{ lookup('keepass', 'mysql_user', 'password') }}" # mkpasswd --method=SHA-512 --stdin  #in Keepass
+      password: "{{ lookup('keepass', 'mysql_user', 'password') }}"
       priv: "nextcloud_db.*:ALL"
