--- a/ansible/group_vars/g_nextcloud.yml
+++ b/ansible/group_vars/g_nextcloud.yml
@@ -42,3 +42,7 @@
     - name: kati
       pass: "{{ lookup('keepass', 'nextcloud_kati', 'password') }}"
       resetpassword: no
+  ### geerlingguy.apache
+  apache_remove_default_vhost: true
+  apache_vhosts:
+    - {servername: "{{ ansible_hostname }}.ausbildung.md", documentroot: "/var/www/html/nextcloud"}
