--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -6,7 +6,7 @@ lookup_plugins        = ./plugins/lookup
 collections_paths     = ./ansible_collections
 private_key_file      = ./ansible_private_key
 inventory             = ./inventory.yml
-
+vault_password_file   = ./vault_password_file
 [inventory]
 
 [privilege_escalation]
