server in playbook aufgeniommen

--- a/ansible/playbooks/app/dnsmasq.yml
+++ b/ansible/playbooks/app/dnsmasq.yml
@@ -1,4 +1,4 @@
 ---
-  - hosts: g_dnsmasq
+  - hosts: g_dnsmasq,tldnsm002
     roles:
       - { role: mgrote.dnsmasq, tags: "dnsmasq", become: true}
