--- a/ansible/roles/mgrote.tmux/tasks/main.yml
+++ b/ansible/roles/mgrote.tmux/tasks/main.yml
@@ -19,9 +19,9 @@
     file:
       path: "{{ item.tmux_bashrc_destination }}"
       state: touch
-    when: not stat_result.stat.exists
     with_items:
       - "{{ users_tmux }}"
+    ##when: not stat_result.stat.exists
 
   - name: download tmux.conf for "{{ item.username }}"
     get_url:
