--- a/ansible/roles/mgrote.tmux/tasks/main.yml
+++ b/ansible/roles/mgrote.tmux/tasks/main.yml
@@ -15,10 +15,15 @@
     with_items:
       - "{{ users_tmux }}"
 
+    # prerole damit get_url downloaden kann
+  - include_role:
+      name: mgrote.set_http_proxy
+
   - name: download tmux.conf for "{{ item.username }}"
     get_url:
       url: "{{ item.tmux_downloadpath }}"
       dest: "{{ item.tmux_conf_destination }}"
+      use_proxy: yes
       mode: '0664'
     when: item.tmux_allow
     with_items: "{{ users_tmux }}"
