--- a/ansible/roles/mgrote.tmux/tasks/main.yml
+++ b/ansible/roles/mgrote.tmux/tasks/main.yml
@@ -27,6 +27,9 @@
       mode: '0664'
     when: item.tmux_allow
     with_items: "{{ users_tmux }}"
+    environment:
+    HTTP_PROXY: "{{ proxy_ip }}:{{ proxy_port }}"
+    HTTPS_PROXY: "{{ proxy_ip }}:{{ proxy_port }}"
 
   - name: add tmux-session config to .bashrc
     become: yes
