rolle: set_apt_sources aktiviert (#247)
* sources rein

* acng vars leer

* gruppennamen

* variablen zusammengefasst

* when

* /

* datei pve

* doku

--- a/ansible/roles/mgrote.set_apt_sources/tasks/main.yml
+++ b/ansible/roles/mgrote.set_apt_sources/tasks/main.yml
@@ -8,21 +8,19 @@
       backup: yes
     register: copy_src
     when:
-      - "'ubuntu' in group_names"
-      - acng_server is defined
-      - acng_server_port is defined
+      - "'g_ubuntu' in group_names"
+      - acng_server_and_port is defined
 
-  - name: Proxmox debian.list kopieren
+  - name: Proxmox sources.list kopieren
     become: yes
     template:
       src: "proxmox_sources.list"
-      dest: "/etc/apt/sources.list.d/debian.list"
+      dest: "/etc/apt/sources.list"
       backup: yes
     register: copy_src
     when:
-      - "'proxmox' in group_names"
-      - acng_server is defined
-      - acng_server_port is defined
+      - "'g_proxmox' in group_names"
+      - acng_server_and_port is defined
 
   - name: Proxmox pve-no-subscription.list kopieren
     become: yes
@@ -32,9 +30,8 @@
       backup: yes
     register: copy_src
     when:
-      - "'proxmox' in group_names"
-      - acng_server is defined
-      - acng_server_port is defined
+      - "'g_proxmox' in group_names"
+      - acng_server_and_port is defined
 
   - name: apt_update # noqa 503 503
     become: yes
