--- a/ansible/playbooks/base/cloudinit_bootstrap.yml
+++ b/ansible/playbooks/base/cloudinit_bootstrap.yml
@@ -1,4 +1,4 @@
 ---
-  - hosts: all
+  - hosts: g_proxmox
     roles:
       - { role: DanielMueller1309.ansible_cloud_init, tags: "cloudinit_bootstrap", become: yes}
