--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -65,7 +65,7 @@
   ntp_client_daemon_group: ntp # Nutzer + Gruppe für den Dienst
   ### mgrote.set_apt_sources
   acng_server_and_port: ""  # ip/fqdn:port/
-  ### robertdebock.bootstrap
+  ### ryandaniels.create_users
   users:
     - username: root
       password: "{{ lookup('keepass', 'linux_user_root_password_hash', 'password') }}" # mkpasswd --method=SHA-512 --stdin
