apt-proxy mit template

--- a/ansible/roles/set_apt_proxy/tasks/main.yml
+++ b/ansible/roles/set_apt_proxy/tasks/main.yml
@@ -1,15 +1,7 @@
 ---
   - name: ensure apt.conf exists
     become: true
-    ansible.builtin.file:
-      path: "{{ apt_proxy_apt_conf_path }}"
-      state: touch
-      access_time: preserve
-      modification_time: preserve
-
-  - name: set proxy
-    become: yes
-    ansible.builtin.lineinfile:
-      path: "{{ apt_proxy_apt_conf_path }}"
-      line: Acquire::http::proxy "http://{{ apt_proxy_server }}:{{ apt_proxy_port }}";
-      state: present
+    ansible.builtin.template:
+      src: apt.conf
+      dest: "{{ apt_proxy_apt_conf_path | default ('/etc/apt/apt.conf') }}"
+    when: apt_proxy_server is defined
