--- a/ansible/group_vars/g_dnsmasq.yml
+++ b/ansible/group_vars/g_dnsmasq.yml
@@ -9,6 +9,8 @@
   dnsmasq_max_leases: "200" # wieviel leases darf dnsmasq gleichzeitig vergeben
   dnsmasq_external_nameserver:  # Welche nameserver soll dnsmasq befragen
     - address: "127.0.0.1" # sonst kann dnsmasq selber nichts auflösen
+    - address: "10.62.94.6"
+    - address: "10.62.94.7"
   dnsmasq_listen_port: "53" # auf welchem Port soll dnsmasq hören
   dnsmasq_domain: ausbildung.md # wie heißt die lokale domain
   dnsmasq_dhcp_pools: # welche dhcp pools gibt es
