--- a/ansible/playbooks/base/99_base.yml
+++ b/ansible/playbooks/base/99_base.yml
@@ -4,4 +4,5 @@
   - import_playbook: 2_packages.yml
   - import_playbook: 3_qemu_guest_agent.yml
   - import_playbook: configure_ntp_client.yml
+  - import_playbook: configure_http_proxy.yml
   - import_playbook: 3_haertung.yml
