--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -4,6 +4,10 @@
   http_proxy_port: "8080" # port des proxys
   http_proxy_local_subnet: "11.10.31.0./24" # lokales subnetz das nicht über den proxy geht
 
+  ### mgrote.manage_apt_sources
+  manage_sources_apt_proxy_server: ""
+  manage_sources_apt_proxy_port: ""
+
   ### mgrote.apt_install_packages
   programs_common:
     - locales
