--- a/ansible/playbooks/base/2_packages.yml
+++ b/ansible/playbooks/base/2_packages.yml
@@ -2,5 +2,5 @@
   - hosts: all
     serial: 3
     roles:
-      #- { role: mgrote.update_packages, tags: "update", become: yes}
-      #- { role: mgrote.apt_install_packages, tags: "install"}
+      - { role: mgrote.update_packages, tags: "update", become: yes}
+      - { role: mgrote.apt_install_packages, tags: "install"}
