--- a/ansible/roles/mgrote.apt_manage_sources/tasks/proxmox.yml
+++ b/ansible/roles/mgrote.apt_manage_sources/tasks/proxmox.yml
@@ -26,7 +26,7 @@
       state: present
     register: copy_src
     # noqa 601
-    when: pve_no_subscription_repo_keys.stat.exists == false
+    when: pve_no_subscription_repo_keys.stat.exists == false # noqa 601
 
   - name: add pve-no-subscription repo
     become: yes
