--- a/ansible/host_vars/RMPHLPVE1.yml
+++ b/ansible/host_vars/RMPHLPVE1.yml
@@ -1,6 +1,6 @@
 ---
   ### mgrote.cv4pve-autosnap
-  cv4pve_api_user: root@pam!cv4pve-autosnap
+  cv4pve_api_user: root@pam!cv4pve
   cv4pve_api_token: "{{ lookup('keepass', 'cv4pve_api_token', 'password') }}"
   cv4pve_vmid: all
   cv4pve_keep_snapshots: 7
