--- a/.github/workflows/bash_lint.yml
+++ b/.github/workflows/bash_lint.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Run Shellcheck
         uses: ludeeus/action-shellcheck@master
         with:
-          ignore: cv4pve-script.sh
+          ignore: mgrote.cv4pve-autosnap
