--- a/.github/workflows/bash_lint.yml
+++ b/.github/workflows/bash_lint.yml
@@ -8,6 +8,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run Shellcheck
-        uses: azohra/shell-linter@latest
-
-# https://github.com/azohra/shell-linter
+        uses: ludeeus/action-shellcheck@master
+        with:
+          ignore: mgrote.cv4pve-autosnap
