--- a/ansible/roles/tmaurice.gitea/tasks/main.yml
+++ b/ansible/roles/tmaurice.gitea/tasks/main.yml
@@ -19,6 +19,8 @@
     group: root
     mode: 0755
     force: true
+  environment:
+    http_proxy: http://{{ proxy_ip }}:{{ proxy_port }}
   notify: "Restart gitea"
   when: (not gitea_version_check|bool) or (not ansible_check_mode and (gitea_active_version.stdout != gitea_version))
 
